# waca-morning

./: .gitignore  README.md  action.yml  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: android.yml  development.yml  main.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  globals.scss  greet.tsx  layout.tsx  page.module.css  page.module.scss  page.tsx
src/app/components/Forecast/: Forecast.module.scss  Forecast.tsx  index.ts
src/app/components/Header/: Header.module.css  Header.module.scss  Header.tsx
src/app/components/MapElements/: Card.module.css  Card.module.scss  Card.tsx
src/app/components/Search/: Search.module.scss  Search.tsx
src/app/components/Updater/: Updater.tsx
src/app/customHooks/: GetCountryCurrentCondition.ts
src/app/customHooks/context/: AppContext.tsx
src/app/customHooks/flagsApi/: GetFlag.ts  useGetFlag.ts
src/app/customHooks/openMeteo/: GetCurrentForecast.ts  GetForecast.ts  useGetCurrentForecast.ts  useGetForecast.ts
src/app/lib/: images.ts  locations.ts  types.ts  utils.ts
src/app/lib/open.meteo/: codes.ts  (+2 more)
src/app/styles/: _mixings.scss  variables.module.scss
src/app/ui/: fonts.ts  greet.tsx
wacamoclima-ui/: .env  .nvmrc  README.md  package.json  pnpm-lock.yaml  vite.config.ts
wacamoclima-ui/docs/: cities.dio
wacamoclima-ui/src/: App.css  App.tsx  NoPage.tsx  index.css
wacamoclima-ui/src/wacamap/: MapContext.tsx  WacaMap.tsx  index.css  locations.tsx  mapUtils.tsx  objects.tsx  waca-map.tsx
(+21 files in other folders)
